    3. The "accept-charset" attribute for forms is ignored; the page content character set is used to encode any response. 
       This behavior matches that currently used by IE and Navigator.
    4. No order is guaranteed for parameters from forms, contrary to the HTML 4.01 spec

Limitations: HttpUnit does not support JavaScript

Revision History:

16-Jul-2001
Acknowledgements:
    Thanks to Chris Stevenson for identifying a problem with forms lacking an action

Additions:
    1. It is now possible to see the response accompanying an error status by
       calling HttpUnitOptions.setExceptionsThrownOnErrorStatus( false ) before
       calling getResponse. This will prevent HttpUnit from throwing an exception
       in such cases. You can still check the status of the response by calling
       WebResponse.getStatusCode()
       
Problems corrected:
    1. Forms with no action now default to the originating page

 6-Jul-2001 1.2.6
Acknowledgements:
    Thanks to Marcos Tarruella for adding a test case for the Base64 class
    
Additions:
    1. WebResponse.getRefreshRequest now returns a WebRequest object if a refresh URL
       was specified in the response header.
    2. WebResponse.getRefreshDelay specifies the delay found in the header, if any.
    3. HttpUnitOptions.setAutoRefresh controls whether the refresh URL is automatically followed.
    4. ServletUnit now supports HttpServletResponse.getOutputStream
    5. ServletUnit now supports <meta> tag parsing
    6. WebResponse.newResponse added to allow other libraries (such as Apache Cactus)
       to create WebResponse objects without using WebClient.

Problems corrected:
    1. The cookbook was missing parentheses for its constructors
    2. Updated the NearWords example to accomodate changes to the Merriam-Webster site

    
18-Jun-2001 1.2.5                            
Acknowledgements:
    Thanks to Rolf Schmidiger for corrected behavior when failing to find a site